--- a/website-blocker/manifest.json
+++ b/website-blocker/manifest.json
@@ -2,10 +2,11 @@
     "manifest_version": 3,
     "name": "Website Blocker",
     "version": "1.0",
-    "description": "Block specified websites and redirect to Google.",
+    "description": "Block specified websites",
     "permissions": [
         "declarativeNetRequest",
-        "storage"
+        "storage",
+        "tabs"
     ],
     "host_permissions": [
         "<all_urls>"
